fix map & footer, add blogs, video, course, footer, scrollbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-
-
-
 html body, .content {
     background-color: #0e1527;
 }
@@ -8,6 +5,29 @@ html body, .content {
     background-color: #fff;
 }
 
+.content-map, .content-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* SCROLL BAR */
+::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar{
+	width: 7px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #0e1527;
+}
+
+/* NAVBAR */
 header {
     display: flex;
     justify-content: space-around;
@@ -15,25 +35,19 @@ header {
     /* background-color: blue; */
 }
 
-.content-map, .content-info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
 /* DESCRIPTION CONTENT */
 .desc-content {
     text-align: center;
-    margin: 1rem;
+    margin: 3rem 0 3rem 0;
     color: rgba(255, 255, 255, 0.452);
+    max-width: 90%;
 }
 
-/* ROLE BASED ROADMAP */
+/* ROLE & SKILL BASED ROADMAP */
 .title {
     font-size: 24px;
     margin-top: 2rem;
-    border-bottom: 2px solid #fff;
+    border-bottom: 1px solid #fff;
     padding: 5px;
 }
 .role {
@@ -48,29 +62,128 @@ header {
 }
 .menu li {
     border: 2px solid #ffffff7a;
-    padding: 7px;
+    padding: 10px;
     border-radius: 7px;
     margin: 0.5rem;
     list-style: none;
     text-decoration: none;
     width: 200px;
 }
+.menu li:hover{
+    border: 2px solid #fff;
+    transition: 0.3s;
+}
 .menu li a {
     list-style: none;
     text-decoration: none;
     color: #fff;
+    font-size: 20px;
 }
 
-/* GUIDES */
+/* GUIDES & VIDEOS */
 .blog{
     max-width: 700px;
     margin: 2rem;
-    text-align: center;
+}
+.blog .more-btn{
+    background-color: #0e1527;
+    list-style: none;
+    text-decoration: none;
+    border-radius: 7px;
+    font-size: 13px;
+}
+.menu-blog{
+    flex-wrap: wrap ;
+    flex-direction: column;
+    margin-top: 1.5rem;
+}
+.menu-blog .blog-btn {
+    width: 100%;
+    text-decoration: none;
+    color: #000;
+    display: inline-block;
+    justify-content: space-between;
+    border-bottom: 1px solid #cfcfcf;
+    margin-bottom: 1rem;
+}
+.menu-blog .blog-btn:hover{
+    color: dodgerblue;
+    transform: translateX(10px);
+    transition: 0.2s;
 }
 
+/* FOOTER */
+.footer-container {
+    background-color: #0e1527;
+    min-height: 50vh;
+  }
+  .nav-2 {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+  }
+  .nav-2 > a {
+    color: #8e8c8c;
+    margin: 0 2em;
+    text-decoration: none;
+    font-size: 20px;
+  }
+  .nav-2 > a:hover {
+    color: white;
+  }
+  .main-footer-content {
+    display: flex;
+    justify-content: center;
+    padding-top: 45px;
+  }
+  .main-footer-content > div {
+    margin: 0 50px;
+  }  
+  .footer-main-1 {
+    width: 20rem;
+    color: #fff;
+  }
+  .navbar-brand1 {
+    color: #f9f8f8;
+    margin-bottom: 0;
+  }
+  .navbar-brand1 > span {
+    color: gray;
+  }
+  .footer-main-1 > a {
+    display: flex;
+  }
+  .footer-main-2 {
+    width: 20rem;
+    color: #fff;
+  }
+  .copyright {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 254, 254, 0);
+    padding: 10px;
+    text-align: center;
+    font-size: 10px;
+    color: azure;
+  }
+  
 
+@media (max-width: 500px) {
+    .main-footer-content {
+      display: block;
+    }
+    .footer-main-2 {
+      padding-top: 16px;
+      padding-bottom: 30px;
+    }
+  }
+
+/* RESPONSIVE FOR NAVBAR */
 @media (max-width:1000px) {
     header {
         display: block;
     }
 }
+
